src/test/ui/resolve/token-error-correct-3.stderr
error: expected one of `)`, `,`, `.`, `?`, or an operator, found `;`
  --> $DIR/token-error-correct-3.rs:15:35
   |
LL |             callback(path.as_ref();
   |                     -             ^ help: `)` may belong here
   |                     |
   |                     unclosed delimiter

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `)`
  --> $DIR/token-error-correct-3.rs:18:9
   |
LL |             fs::create_dir_all(path.as_ref()).map(|()| true)
   |                                                             - expected one of `.`, `;`, `?`, `}`, or an operator here
LL |         } else {
   |         ^ unexpected token

error[E0425]: cannot find function `is_directory` in this scope
  --> $DIR/token-error-correct-3.rs:13:13
   |
LL |         if !is_directory(path.as_ref()) {
   |             ^^^^^^^^^^^^ not found in this scope

error[E0308]: if and else have incompatible types
  --> $DIR/token-error-correct-3.rs:20:13
   |
LL | /         if !is_directory(path.as_ref()) {
LL | |
LL | |             callback(path.as_ref();
LL | |
LL | |             fs::create_dir_all(path.as_ref()).map(|()| true)
   | |             ------------------------------------------------ expected because of this
...  |
LL | |             Ok(false);
   | |             ^^^^^^^^^-
   | |             |        |
   | |             |        help: consider removing this semicolon
   | |             expected enum `std::result::Result`, found ()
LL | |
LL | |         }
   | |_________- if and else have incompatible types
   |
   = note: expected type `std::result::Result<bool, std::io::Error>`
              found type `()`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0308, E0425.
For more information about an error, try `rustc --explain E0308`.
